skeleton cleaned up

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 .DS_Store
-stock_data.xlsx
-*.exe
-kis_keys.txt
-kosdaq_code.*
-kospi_code.*
+kis-keys.txt
+kis-mock-keys.txt
 token.dat
-api-crawling.py
-kis.py
