finished chatbot with more features

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ kis-keys.txt
 kis-mock-keys.txt
 token.dat
 telegram-key.txt
+kosdaq_code.mst
+kospi_code.mst
+kosdaq_code.mst.zip
+kospi_code.mst.zip
